--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,14 +4,12 @@
 }
 
 .header-title {
-  font-size: 2em;
   margin-bottom: 10px;
 }
 
 .header-description {
-  font-size: 1.2em;
-  margin-bottom: 20px;
-  padding: 10%;
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
 .header-image {
